# projeto_api_clima_tempo

./: pyproject.toml
projeto_api_clima_tempo/: clima_cidades_20250624_140300.csv  clima_cidades_20250624_143024.csv  clima_cidades_20250624_143149.csv  clima_cidades_20250624_143228.csv  clima_cidades_20250625_185954.csv  clima_cidades_20250625_191247.csv  main.py
tests/: __init__.py
